<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityUserTransaction">

    <EditText
        android:id="@+id/ettransaction_id"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/transaction_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/transaction_id" />

    <EditText
        android:id="@+id/etuser_id2"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_id" />

    <EditText
        android:id="@+id/etpayment_id"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/payment_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/payment_id" />

    <EditText
        android:id="@+id/etamount"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ettype"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/type" />

    <EditText
        android:id="@+id/etcomment"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="296dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnagregar2"
        android:layout_width="101dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnelimarut"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="44dp"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/eliminar" />

    <Button
        android:id="@+id/btnactualizarut"
        android:layout_width="110dp"
        android:layout_height="39dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="44dp"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/actualizar" />

    <Button
        android:id="@+id/btnconsultarut"
        android:layout_width="112dp"
        android:layout_height="38dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="44dp"
        android:text="@string/consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/consultar" />

    <Button
        android:id="@+id/btnmostrarut"
        android:layout_width="102dp"
        android:layout_height="39dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="52dp"
        android:onClick="ingresarListViewUT"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>