<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityUsers">

    <EditText
        android:id="@+id/ptuser_id"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/user_id" />

    <EditText
        android:id="@+id/ptpayment_id"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/payment_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/payment_id" />

    <EditText
        android:id="@+id/ptemail"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/email" />

    <EditText
        android:id="@+id/ptfirst_name"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/first_name" />

    <EditText
        android:id="@+id/pflast_name"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/last_name" />

    <EditText
        android:id="@+id/ptadress"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/address" />

    <EditText
        android:id="@+id/ptpf"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/performance_factor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/performance_factor" />

    <EditText
        android:id="@+id/ptcellphone"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cellphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/cellphone" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/agregar" />

    <Button
        android:id="@+id/btnconsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="48dp"
        android:text="@string/consultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/consultar" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="48dp"
        android:text="@string/eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/eliminar" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="48dp"
        android:text="@string/actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/actualizar" />

    <EditText
        android:id="@+id/ptpassword"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="184dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ptuser_id"
        tools:text="@string/password" />
</androidx.constraintlayout.widget.ConstraintLayout>